# contact-messenger-bot

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: ci.yml  docker-image.yml
contact-messenger-bot-api/: README.md  pyproject.toml
contact-messenger-bot-api/contact_messenger_bot/api/: __init__.py  constants.py  logging.py  models.py  utils.py
contact-messenger-bot-api/contact_messenger_bot/api/contacts/: __init__.py  areacode.py  constants.py  models.py  service.py  utils.py
contact-messenger-bot-api/contact_messenger_bot/api/contacts/messages/: __init__.py  birthday.py
contact-messenger-bot-api/contact_messenger_bot/api/messages/: __init__.py  anniversary.py  birthday.py
contact-messenger-bot-api/contact_messenger_bot/api/messaging/: __init__.py
contact-messenger-bot-api/contact_messenger_bot/api/oauth2/: __init__.py  credentials.py
contact-messenger-bot-api/contact_messenger_bot/api/services/: __init__.py  areacode.py  contacts.py  zipcode.py
contact-messenger-bot-api/contact_messenger_bot/api/services/messaging/: __init__.py  email.py  service.py  sms.py  text.py
contact-messenger-bot-api/contact_messenger_bot/api/settings/: __init__.py  base.py  email.py  text.py
contact-messenger-bot-api/notebooks/: ListContacts.ipynb
contact-messenger-bot-api/scripts/: launch.sh  secrets.sh
contact-messenger-bot-cli/: README.md  pyproject.toml
contact-messenger-bot-cli/contact_messenger_bot/cli/: __init__.py  __main__.py
contact-messenger-bot-cli/contact_messenger_bot/cli/commands/: __init__.py  constants.py  contacts.py
contact-messenger-bot-cli/scripts/: launch.sh
contact-messenger-bot-functions/: README.md  pyproject.toml
contact-messenger-bot-functions/contact_messenger_bot/functions/: __init__.py  __main__.py  app.py  constants.py  credentials.py  execute.py  function.py  gcs.py
contact-messenger-bot-functions/scripts/: launch.sh  secrets.sh
scripts/: re-add-api.sh
